--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,23 @@
 spring.application.name=adsoSpringBoot
 
+server.port=8080
+spring.datasource.url=jdbc:mysql://localhost:3306/adso_db
+#spring.postgresql.url=jdbc:postgresql://localhost:5432/adso_db
+spring.datasource.username=root
+spring.datasource.password=
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.properties.hibernate.format_sql=true
+
+# Logging configuration
+logging.level.org.springframework=INFO
+logging.level.com.yourpackage=DEBUG
+# CORS configuration
+cors.allowed-origins=http://localhost:3000
+cors.allowed-methods=GET,POST,PUT,DELETE
+cors.allowed-headers=Content-Type,Authorization
+cors.allow-credentials=true
+
+
+
